[package]
name        = "agnostik"
version     = "0.1.6-alpha.0"
description = "Executor Agnostic Runtime that can run your futures with your favourite Executor."
license     = "MIT/Apache-2.0"
authors     = ["Justus K <justus.k@protonmail.com>", "Mahmut Bulut <vertexclique@gmail.com>"]
homepage    = "https://github.com/bastion-rs/agnostik"
edition     = "2018"

[features]
runtime_bastion = ["bastion-executor", "lightproc"]
runtime_asyncstd = ["async_std_crate"]
runtime_tokio = ["tokio_crate"]
runtime_smol = ["smol_crate"]

[dependencies]
bastion-executor = { version = "0.4.0", optional = true, features = [] }
async_std_crate = { version = "1.6.2", optional = true, features = ["unstable"], package = "async-std" }
tokio_crate = { version = "0.3", optional = true, features = ["rt-multi-thread"], package = "tokio" }
lightproc = { version = "0.3.5", optional = true }
smol_crate = { version = "0.1", optional = true, package = "smol" }
once_cell = "1.4.0"

[dev-dependencies]
tokio_crate = { version = "0.3", features = ["time"], package = "tokio" }
