[package]
name        = "agnostik"
version     = "0.2.0"
description = "Executor Agnostic Runtime that can run your futures with your favourite Executor."
license     = "MIT/Apache-2.0"
authors     = ["Justus K <justus.k@protonmail.com>", "Mahmut Bulut <vertexclique@gmail.com>"]
homepage    = "https://github.com/bastion-rs/agnostik"
edition     = "2018"

[features]
runtime_bastion = ["bastion-executor", "lightproc"]
runtime_asyncstd = ["async_std_crate"]
runtime_tokio = ["tokio_crate"]
runtime_smol = ["smol_crate"]

[dependencies]
bastion-executor = { version = "0.4.0", optional = true }
async_std_crate = { version = "1.7.0", optional = true, features = ["unstable"], package = "async-std" }
tokio_crate = { version = "0.3.4", optional = true, features = ["rt", "rt-multi-thread"], package = "tokio" }
lightproc = { version = "0.3.5", optional = true }
smol_crate = { version = "1.2.4", optional = true, package = "smol" }
once_cell = "1.5.2"
pin-project = "1.0.2"

[dev-dependencies]
tokio_crate = { version = "0.3.4", features = ["time"], package = "tokio" }

[build-dependencies]
cfg_aliases = "0.1.1"
